--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,36 @@
-flask
+attrs==22.1.0
+certifi==2022.9.24
+click==8.1.3
+click-plugins==1.1.1
+cligj==0.7.2
+contourpy==1.0.6
+cycler==0.11.0
+Fiona==1.8.22
+Flask==2.2.2
+fonttools==4.38.0
+GDAL==3.2.2.1
+importlib-metadata==5.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.2.0
+kiwisolver==1.4.4
+mapclassify==2.4.3
+MarkupSafe==2.1.1
+matplotlib==3.6.2
+munch==2.5.0
+networkx==2.8.8
+numpy==1.23.4
+packaging==21.3
+pandas==1.5.1
+Pillow==9.3.0
+pyparsing==3.0.9
+pyproj==3.4.0
+python-dateutil==2.8.2
+pytz==2022.6
+scikit-learn==1.1.3
+scipy==1.9.3
+Shapely==1.8.5.post1
+six==1.16.0
+threadpoolctl==3.1.0
+Werkzeug==2.2.2
+zipp==3.10.0
