--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ importlib-metadata==5.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.2.0
+jenkspy
 kiwisolver==1.4.4
 mapclassify==2.4.3
 MarkupSafe==2.1.1
