--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.9
 RUN apt-get update 
 RUN apt install -y libgdal-dev
 COPY ./requirements.txt /requirements.txt
-COPY ./app.py  /app.py
 RUN pip install -r requirements.txt
+COPY ./app.py  /app.py
+COPY ./routes  ./routes
+COPY ./utils ./utils
 CMD ["python3", "app.py"]
