--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ importlib-metadata==5.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.2.0
-jenkspy
+jenkspy==0.3.2
 kiwisolver==1.4.4
 mapclassify==2.4.3
 MarkupSafe==2.1.1
@@ -37,3 +37,4 @@ Werkzeug==2.2.2
 zipp==3.10.0
 geopandas==0.12.1
 geopy==2.3.0
+flasgger==0.9.5
