--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ python-dateutil==2.8.2
 pytz==2022.6
 scikit-learn==1.1.3
 scipy==1.9.3
-Shapely==1.8.5.post1
+Shapely==2.0.1
 six==1.16.0
 threadpoolctl==3.1.0
 Werkzeug==2.2.2
