--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.9
 RUN apt-get update 
 RUN apt install -y libgdal-dev
-COPY ./requirements.txt /requirements.txt
+COPY ./docker/requirements.txt /requirements.txt
 RUN pip install -r requirements.txt
 COPY ./app.py  /app.py
 COPY ./routes  ./routes
